# pandas_data_generator

./: .gitignore  README.md  README.rst  pyproject.toml  requirements.txt  tox.ini
benchmark/: benchmark_bool.py  benchmark_char.py
docs/source/: api.rst  conf.py  index.rst
randen/: __init__.py  config.ini  data_generator.py  data_generator_utils.py
tests/: test_data_generator.py
