[tool.poetry]
name = "randen"
version = "1.0.0"
description = "Random dataframe generator"
authors = ["Kanishk Varshney <varskann1993@gmail.com>"]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/varskann/randen"
repository = "https://github.com/varskann/randen"
keywords = ["pandas", "random", "dataframe"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.1.2"
pytest = "^6.1.1"
tox = "^3.20.0"
pylint = "^2.6.0"
numpy = "^1.19.2"
Sphinx = "^3.2.1"
sphinx-rtd-theme = "^0.5.0"

[tool.poetry.dev-dependencies]
pytest = "^6.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
